@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Help_View.cxx,v 1.1.2.2 2001/10/01 19:33:22 easysw Exp $"
+// "$Id: Fl_Help_View.cxx,v 1.1.2.3 2001/10/01 19:38:28 easysw Exp $"
 //
 // Fl_Help_View widget routines.
 //
@@ -728,9 +728,6 @@ Fl_Help_View::add_image(const char *name,	// I - Path of image
        }
 
        // Finally, copy the new size and data to the image structure...
-       if (!orig)
-         free(img->data);
-
        img->w    = width;
        img->h    = height;
        img->data = scaled;
@@ -3581,5 +3578,5 @@ scrollbar_callback(Fl_Widget *s, void *)
 
 
 //
-// End of "$Id: Fl_Help_View.cxx,v 1.1.2.2 2001/10/01 19:33:22 easysw Exp $".
+// End of "$Id: Fl_Help_View.cxx,v 1.1.2.3 2001/10/01 19:38:28 easysw Exp $".
 //
